# fogim-server

./: .gitignore  README.md  pyproject.toml
fogim_server/: main.py
fogim_server/src/: main.py
fogim_server/src/media/: models.py  routers.py
