[tool.poetry]
name = "fogim-server"
version = "0.1.0"
description = ""
authors = ["briantical <lutbrianivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "fogim_server.main:start"
